# SuperVideoGenerator

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  create-desktop-shortcut.bat  dev-desktop.bat  dev.bat  dev.sh  launch-desktop.bat  launch-desktop.vbs  pyproject.toml  requirements-desktop.txt  requirements.txt  start_api.bat  start_api.sh  start_web.bat  start_web.sh
.claude/plans/: opencut-editor-build.md  transient-splashing-bonbon.md
.cursor/rules/: dead-code-cleanup.mdc  doc-driven-dev.mdc  doc-sync.mdc  test-verification.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: pages.yml  publish-v015-assets.yml  release-desktop.yml
apps/api/: chat_job.py  desktop_static.py  main.py  state.py
apps/desktop/: README.md  devServers.cjs  devServers.test.cjs  electron-builder.yml  ensure-electron.cjs  ensure-electron.test.cjs  main.cjs  mediaPath.cjs  mediaPath.test.cjs  openExternal.cjs  openExternal.test.cjs  package-lock.json  package.json  packagingFiles.test.cjs  preload.cjs  prodServers.cjs  prodServers.test.cjs  splash-boot.html  start-electron.cjs  updater.cjs  updater.test.cjs  userDataPaths.cjs  userDataPaths.test.cjs
apps/remotion/: package-lock.json  package.json  tsconfig.json
apps/web/: index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts
core/: __init__.py  constants.py
core/a2ui/: __init__.py  manager.py  schemas.py
core/agents/: asset_content.py  base.py  config_manager.py  conversation.py  definitions.py  llm_action.py  llm_agents.py  mock_agents.py  prompt_resolver.py  prompts.py  react_core.py  registry.py  script_assets.py
core/assets/: __init__.py  chroma_key.py  element_refs.py  image_prompt.py  lineage.py  linked_assets_prompt.py  regenerate.py  resolved_prompt.py  service.py  text_asset_draft.py  user_crud.py  video_prompt.py  video_text_service.py  voice_audio_upload.py
core/board/: __init__.py  builder.py  models.py
core/conversation/: __init__.py  index.py  migrate.py  persist.py  sqlite_store.py  store.py  timeline.py  write_queue.py
core/dialogue/: session_store.py
core/edit/: asset_resolver.py  capabilities.json  compose.py  edit_capabilities.py  export_jobs.py  export_paths.py  export_reveal.py  (+29 more)
docs/: README.md  code-design-plan.md  data-storage.md  desktop-packaging.md  edit-studio-plan.md  extensions.md  frontend-style-guide.md  getting-started.en.md  getting-started.md  i18n.md  opencut-integration.md  opencut-migration-review.md  orchestration-state.md  product-overview.en.md  product-overview.md  product-plan.md  prompt-architecture.md  shot-structure-and-logic.md  tools-reference.md
examples/svg-ext-template/: pyproject.toml
examples/svg-ext-template/svg_ext_hello/: __init__.py  skills.py  tools.py
examples/svg-ext-template/svg_ext_hello/skills/hello/: skill.json  system.md
scripts/: debug_out.txt  diag_timeline_conversion.py  diagnose_storyboard.py  export_owl_icon.mjs  export_owl_icon.py  gen_shims.py  gen_tools_shims.py  port_opencut_to_svf.py  prune_interaction_logs.py  restore_preview_panel.py  update_desktop_shortcut.ps1
site/: README.md  i18n.js  index.html  smoke-check.mjs  styles.css
tests/: conftest.py  verification_agent_flow.md
(+1434 files in other folders)
