[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "super-video-generator"
version = "0.1.0"
description = "AI video generation agent with ReAct orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "websockets>=12.0",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "edge-tts>=7.2",
    "pydub>=0.25",
    "openai>=1.0",
    "imageio-ffmpeg>=0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not live and not integration'"
markers = [
    "live: 需要真实 LLM API Key 与网络（默认不跑）",
    "integration: 需要 Node/Remotion 等完整环境（默认不跑）",
]
