[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "super-video-generator"
version = "0.1.0"
description = "AI video generation agent with ReAct orchestration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "websockets>=12.0",
    "httpx>=0.27",
    "jsonschema>=4.21",
    "edge-tts>=7.2",
    "pydub>=0.25",
    "openai>=1.0",
    "imageio-ffmpeg>=0.5.1",
    "mcp>=1.7",
    "torch>=2.0",
    "torchaudio>=2.0",
    "whisperx>=3.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "apps*"]

[project.entry-points."svg.tools"]
web_search = "core.extensions.builtin.web_search:register_tools"

[project.entry-points."svg.skills"]

[project.entry-points."svg.mcp_servers"]
