# SVG 扩展示例包模板（pip install -e . 后重启 API）

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "svg-ext-hello"
version = "0.1.0"
description = "SuperVideoGenerator Skill + Tool 扩展示例"
requires-python = ">=3.11"

[project.entry-points."svg.tools"]
hello = "svg_ext_hello.tools:register_tools"

[project.entry-points."svg.skills"]
hello = "svg_ext_hello.skills:get_skill_bundle"

[tool.setuptools.packages.find]
where = ["."]
include = ["svg_ext_hello*"]

[tool.setuptools.package-data]
svg_ext_hello = ["skills/**/*"]
